# socket-patch

./: .gitattributes  .gitignore  .npmignore  .oxlintrc.json  CHANGELOG.md  Cargo.toml  Cross.toml  EDGE_CASES.md  README.md  biome.json  package.json  pnpm-lock.yaml  socket.yml  tsconfig.json
crates/socket-patch-cli/: CLI_CONTRACT.md  Cargo.toml  build.rs
crates/socket-patch-cli/src/: args.rs  ecosystem_dispatch.rs  json_envelope.rs  lib.rs  main.rs  output.rs  update_notifier.rs
crates/socket-patch-cli/src/commands/: apply.rs  fetch_stage.rs  get.rs  list.rs  lock_cli.rs  mod.rs  remove.rs  repair.rs  repair_vendor.rs  rollback.rs  scan.rs  setup.rs  unlock.rs  update.rs  vendor.rs  vex.rs
crates/socket-patch-cli/src/commands/scan/: discovery.rs  gc.rs  hosted.rs  mod.rs  vendor_flow.rs
crates/socket-patch-cli/tests/: api_client_errors_e2e.rs  apply_invariants.rs  apply_network.rs  cli_apply_silent.rs  cli_argv_non_utf8.rs  cli_config_fallback.rs  cli_dry_run_paths_e2e.rs  cli_env_deprecation.rs  cli_get_silent.rs  cli_global_args.rs  cli_parse_apply.rs  cli_parse_get.rs  cli_parse_list.rs  cli_parse_main.rs  cli_parse_remove.rs  cli_parse_repair.rs  cli_parse_rollback.rs  cli_parse_scan.rs  cli_parse_setup.rs  cli_parse_unlock.rs  cli_parse_vendor.rs  cli_parse_vex.rs  cli_remove_silent.rs  cli_rollback_silent.rs  cli_scan_silent.rs  cli_setup_silent.rs  cli_sigpipe.rs  docker_e2e_cargo.rs  docker_e2e_composer.rs  docker_e2e_deno.rs  docker_e2e_gem.rs  docker_e2e_golang.rs  docker_e2e_maven.rs  docker_e2e_npm.rs  docker_e2e_nuget.rs  docker_e2e_pypi.rs  docker_e2e_vendor_composer.rs  docker_e2e_vendor_gem.rs  docker_e2e_vendor_maven.rs  docker_e2e_vendor_nuget.rs  (+106 more)
crates/socket-patch-cli/tests/common/: mod.rs  update_fixture.rs
crates/socket-patch-cli/tests/docker_vendor_common/: mod.rs
crates/socket-patch-cli/tests/setup_matrix_common/: mod.rs
crates/socket-patch-core/: Cargo.toml  README.md
crates/socket-patch-core/src/: constants.rs  lib.rs
crates/socket-patch-core/src/api/: blob_fetcher.rs  client.rs  mod.rs  types.rs
crates/socket-patch-core/src/cargo_setup/: discover.rs  mod.rs  update.rs
crates/socket-patch-core/src/composer_setup/: mod.rs
crates/socket-patch-core/src/crawlers/: cargo_crawler.rs  composer_crawler.rs  deno_crawler.rs  go_crawler.rs  maven_crawler.rs  mod.rs  npm_crawler.rs  nuget_crawler.rs  pkg_managers.rs  python_crawler.rs  ruby_crawler.rs  types.rs
crates/socket-patch-core/src/gem_setup/: mod.rs  update.rs
crates/socket-patch-core/src/gem_setup/templates/: gemspec.tmpl  plugins.rb.tmpl
crates/socket-patch-core/src/go_setup/: mod.rs
crates/socket-patch-core/src/go_setup/templates/: guard.go.tmpl  guard_test.go.tmpl
crates/socket-patch-core/src/hash/: git_sha256.rs  mod.rs
crates/socket-patch-core/src/manifest/: mod.rs  operations.rs  recovery.rs  schema.rs
crates/socket-patch-core/src/package_json/: detect.rs  find.rs  mod.rs  update.rs
crates/socket-patch-core/src/patch/: apply.rs  apply_lock.rs  bun_lock_text.rs  cargo_config.rs  cargo_redirect.rs  copy_tree.rs  cow.rs  diff.rs  file_hash.rs  go_mod_edit.rs  go_redirect.rs  mod.rs  package.rs  path_safety.rs  rollback.rs
crates/socket-patch-core/src/patch/redirect/: mod.rs  state.rs
crates/socket-patch-core/src/patch/sidecars/: cargo.rs  mod.rs  nuget.rs  types.rs
crates/socket-patch-core/src/pth_hook/: detect.rs  edit.rs  mod.rs
crates/socket-patch-core/src/update/: channel.rs  download.rs  mod.rs  release.rs  state.rs  swap.rs
crates/socket-patch-core/src/utils/: cleanup_blobs.rs  enumerate.rs  env_compat.rs  fs.rs  fuzzy_match.rs  global_packages.rs  http.rs  mod.rs  process.rs  purl.rs  serde.rs  socket_cli_config.rs  telemetry.rs  uri.rs
crates/socket-patch-core/src/vex/: build.rs  conformance_tests.rs  mod.rs  product.rs  schema.rs  time.rs  verify.rs
crates/socket-patch-core/tests/: binary_fetch_error_classification_e2e.rs  blob_fetcher_edges_e2e.rs  crawler_cargo_e2e.rs  crawler_composer_e2e.rs  crawler_deno_e2e.rs  crawler_go_e2e.rs  crawler_maven_e2e.rs  crawler_monorepo_gaps.rs  crawler_npm_e2e.rs  crawler_nuget_e2e.rs  crawler_python_e2e.rs  crawler_ruby_e2e.rs  crawlers_empty_paths_e2e.rs  diff_e2e.rs  fuzzy_match_e2e.rs  package_e2e.rs  proxy_batch_e2e.rs  redirect_golden.rs  rollback_new_file_e2e.rs  telemetry_helpers_e2e.rs
crates/socket-patch-core/tests/common/: mod.rs
crates/socket-patch-core/tests/fixtures/redirect/cargo/cargo/basic/: expected-edits.json  overrides.json
crates/socket-patch-core/tests/fixtures/redirect/composer/composer-lock/basic/: expected-edits.json  overrides.json
crates/socket-patch-core/tests/fixtures/redirect/gem/bundler/basic/: expected-edits.json  overrides.json
crates/socket-patch-core/tests/fixtures/redirect/maven/pom/existing-repositories/: expected-edits.json
crates/socket-patch-core/tests/fixtures/redirect/maven/pom/mvn-config-merge/: expected-edits.json
crates/socket-patch-core/tests/fixtures/redirect/maven/pom/no-suffix-fallback/: overrides.json
crates/socket-patch-core/tests/fixtures/redirect/maven/pom/property-version-warn/: expected-edits.json
crates/socket-patch-core/tests/fixtures/redirect/maven/pom/transitive-depmgmt/: expected-edits.json  overrides.json
crates/socket-patch-core/tests/fixtures/redirect/npm/bun/basic/: expected-edits.json
crates/socket-patch-core/tests/fixtures/redirect/pypi/uv/basic/: expected-edits.json  (+1 more)
crates/socket-patch-guard/: Cargo.toml  README.md  SAME_TICK_HEAL_RND.md  build.rs
crates/socket-patch-guard/src/: lib.rs  logic.rs
crates/socket-patch-guard/tests/: same_tick_heal_experiment.rs
pypi/socket-patch/: pyproject.toml  test_dispatch.py
pypi/socket-patch-hook/: README.md  pyproject.toml  socket_patch_hook.pth  test_hook.py
pypi/socket-patch-hook/socket_patch_hook/: __init__.py
pypi/socket-patch/socket_patch/: __init__.py
spikes/pdm/direct-registry/after/: pyproject.toml
spikes/pdm/transitive-path/after/: pyproject.toml
spikes/pdm/transitive-path/before/: pyproject.toml
spikes/poetry/lock-2.1/transitive-path/: pyproject.toml
(+260 files in other folders)
