[workspace]
members = ["crates/socket-patch-core", "crates/socket-patch-cli"]
resolver = "2"

[workspace.package]
version = "1.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SocketDev/socket-patch"

[workspace.dependencies]
socket-patch-core = { path = "crates/socket-patch-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
dialoguer = "0.11"
indicatif = "0.17"
tempfile = "3"
regex = "1"
once_cell = "1"

[profile.release]
strip = true
lto = true
opt-level = "s"
