[workspace]
members = ["crates/socket-patch-core", "crates/socket-patch-cli"]
resolver = "2"

[workspace.package]
version = "3.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SocketDev/socket-patch"

[workspace.dependencies]
socket-patch-core = { path = "crates/socket-patch-core", version = "=3.2.0" }
clap = { version = "=4.5.60", features = ["derive", "env"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.149", features = ["preserve_order"] }
sha2 = "=0.10.9"
hex = "=0.4.3"
reqwest = { version = "=0.12.28", features = ["rustls-tls", "json"], default-features = false }
tokio = { version = "=1.50.0", features = ["full"] }
thiserror = "=2.0.18"
walkdir = "=2.5.0"
uuid = { version = "=1.21.0", features = ["v4"] }
dialoguer = "=0.11.0"
indicatif = "=0.17.11"
tempfile = "=3.26.0"
regex = "=1.12.3"
once_cell = "=1.21.3"
qbsdiff = "=1.4.4"
tar = "=0.4.45"
flate2 = "=1.1.9"
fs2 = "=0.4.3"
wiremock = "=0.6.5"
portable-pty = "=0.9.0"
testcontainers = "=0.27.3"
base64 = "=0.22.1"
serial_test = "=3.4.0"

[profile.release]
strip = true
lto = true
opt-level = "s"
