[package]
name = "socket-patch-cli"
description = "CLI binary for socket-patch: apply, rollback, get, scan security patches"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
name = "socket_patch_cli"
path = "src/lib.rs"

[[bin]]
name = "socket-patch"
path = "src/main.rs"

[dependencies]
socket-patch-core = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }

[features]
# Shipped defaults: npm + PyPI are always compiled in (no feature gate); `cargo`
# is on by default so released binaries and `cargo install socket-patch-cli`
# patch Rust deps and run the build-time guard out of the box. The remaining
# ecosystems stay opt-in. Build `--no-default-features` for a minimal
# (npm + PyPI only) binary — its `apply --check` then fails closed.
default = ["cargo"]
cargo = ["socket-patch-core/cargo"]
golang = ["socket-patch-core/golang"]
maven = ["socket-patch-core/maven"]
composer = ["socket-patch-core/composer"]
nuget = ["socket-patch-core/nuget"]
deno = ["socket-patch-core/deno"]
# Enables the Docker-driven real-package e2e test suite under
# `tests/docker_e2e_*.rs`. Tests in this suite require either a running
# Docker daemon OR `SOCKET_PATCH_TEST_HOST=1` (host-toolchain mode).
docker-e2e = []
# Enables the experimental `setup` end-to-end test matrix under
# `tests/setup_matrix_*.rs`, which drives the `socket-patch setup` →
# native-install → patch-applied flow across every ecosystem/package
# manager via `tests/setup_matrix/run-case.sh`. Same runtime requirement
# as docker-e2e (Docker daemon OR `SOCKET_PATCH_TEST_HOST=1`). These
# tests are ASPIRATIONAL: they assert the ideal (install applies the
# patch) and are EXPECTED to fail for ecosystems whose install hooks
# `setup` does not yet configure. Kept off `--all-features`-required CI;
# the dedicated `setup-matrix` CI job runs them non-blocking.
setup-e2e = []

[dev-dependencies]
sha2 = { workspace = true }
hex = { workspace = true }
wiremock = { workspace = true }
portable-pty = { workspace = true }
testcontainers = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }
# Used by `tests/e2e_safety_lock.rs` to externally hold the same
# `.socket/apply.lock` the binary takes, then spawn the binary and
# assert the lock_held exit-code contract. Same crate the binary
# uses internally (`socket-patch-core::patch::apply_lock`).
fs2 = { workspace = true }
