[package]
name = "socket-patch-cli"
description = "CLI binary for socket-patch: apply, rollback, get, scan security patches"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
name = "socket_patch_cli"
path = "src/lib.rs"

[[bin]]
name = "socket-patch"
path = "src/main.rs"

[dependencies]
socket-patch-core = { workspace = true }
semver = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(unix)'.dependencies]
# main.rs restores the default SIGPIPE disposition so piped invocations
# (`socket-patch scan | head -1`) die quietly instead of panicking.
libc = { workspace = true }

[features]
# Every ecosystem (npm, PyPI, Ruby gems, Go, Cargo, NuGet, Maven, Composer,
# Deno) is unconditionally compiled in — there are no ecosystem feature gates.
# Maven `apply` stays runtime-gated behind `SOCKET_EXPERIMENTAL_MAVEN=1`
# (in-place jar patching corrupts sidecars); committable `vendor` is safe.
# The only features left gate opt-in test suites:
#
# Enables the Docker-driven real-package e2e test suite under
# `tests/docker_e2e_*.rs`. Tests in this suite require either a running
# Docker daemon OR `SOCKET_PATCH_TEST_HOST=1` (host-toolchain mode).
docker-e2e = []
# Enables the experimental `setup` end-to-end test matrix under
# `tests/setup_matrix_*.rs`, which drives the `socket-patch setup` →
# native-install → patch-applied flow across every ecosystem/package
# manager via `tests/setup_matrix/run-case.sh`. Same runtime requirement
# as docker-e2e (Docker daemon OR `SOCKET_PATCH_TEST_HOST=1`). These
# tests are ASPIRATIONAL: they assert the ideal (install applies the
# patch) and are EXPECTED to fail for ecosystems whose install hooks
# `setup` does not yet configure. Kept off `--all-features`-required CI;
# the dedicated `setup-matrix` CI job runs them non-blocking.
setup-e2e = []

[dev-dependencies]
sha2 = { workspace = true }
# docker_e2e_vendor_maven's host oracle recomputes the maven2 .jar.sha1 sidecar.
sha1 = { workspace = true }
# scan_vendor_e2e builds pristine registry tarballs for the auto-fetch tests.
tar = { workspace = true }
flate2 = { workspace = true }
# update_fixture builds the Windows-shaped release archive for self-update e2e.
zip = { workspace = true }
hex = { workspace = true }
wiremock = { workspace = true }
portable-pty = { workspace = true }
testcontainers = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }
# Used by `tests/e2e_safety_lock.rs` to externally hold the same
# `.socket/apply.lock` the binary takes, then spawn the binary and
# assert the lock_held exit-code contract. Same crate the binary
# uses internally (`socket-patch-core::patch::apply_lock`).
fs2 = { workspace = true }
