[package]
name = "socket-patch-core"
description = "Core library for socket-patch: manifest, hash, crawlers, patch engine, API client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
qbsdiff = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
fs2 = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
cargo = []
golang = []
maven = []
composer = []
nuget = []

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
serial_test = { workspace = true }
