[package]
name = "socket-patch-core"
description = "Core library for socket-patch: manifest, hash, crawlers, patch engine, API client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
toml_edit = { workspace = true }
once_cell = { workspace = true }
qbsdiff = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
fs2 = { workspace = true }
tempfile = { workspace = true }

[features]
# `cargo` and `golang` are default features (npm + PyPI + Ruby gems are
# unconditional). Mirror the CLI's defaults so a plain `cargo build` of the
# workspace ships the supported ecosystems (npm, PyPI, Ruby gems, Go, Cargo);
# the still-unsupported ecosystems (maven, nuget, composer, deno) stay opt-in.
default = ["cargo", "golang"]
cargo = []
golang = []
maven = []
composer = []
nuget = []
# Deno covers two surfaces: (1) Deno 2.0's npm-install layouts that
# produce a standard node_modules/ (handled by NpmCrawler today,
# triggered here by deno.json / deno.lock project markers) and
# (2) JSR-registry packages cached at $DENO_DIR/npm/jsr.io/* with
# `pkg:jsr/<scope>/<name>@<version>` PURLs handled by DenoCrawler.
deno = []

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
serial_test = { workspace = true }
