[package]
name = "socket-patch-core"
description = "Core library for socket-patch: manifest, hash, crawlers, patch engine, API client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
toml_edit = { workspace = true }
once_cell = { workspace = true }
qbsdiff = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
fs2 = { workspace = true }
tempfile = { workspace = true }
zip = { workspace = true }
base64 = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

# All ecosystems (npm, PyPI, Ruby gems, Go, Cargo, NuGet, Maven, Composer,
# Deno) are unconditionally compiled in — there are no ecosystem feature
# gates. Maven `apply` stays runtime-gated behind `SOCKET_EXPERIMENTAL_MAVEN=1`
# (in-place jar patching corrupts sidecars); committable `vendor` is safe (it
# never touches ~/.m2).

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
serial_test = { workspace = true }
wiremock = { workspace = true }
