[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "socket-patch"
version = "3.3.0"
description = "CLI tool for applying security patches to dependencies"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Socket Security" }
]
keywords = ["security", "patch", "cli", "dependencies"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
]

[project.optional-dependencies]
# `pip install socket-patch[hook]` additionally installs the
# package-manager-agnostic .pth startup hook that re-applies patches after
# install. Unpinned so the hook updates independently of the CLI. `setup`
# itself commits a bare `socket-patch-hook` dependency (the hook needs no
# specific CLI version — it runs whatever `socket-patch` is on PATH).
hook = ["socket-patch-hook"]

[project.urls]
Homepage = "https://github.com/SocketDev/socket-patch"
Repository = "https://github.com/SocketDev/socket-patch"

[project.scripts]
socket-patch = "socket_patch:main"

[tool.setuptools.package-data]
socket_patch = ["bin/*"]
