[project]
name = "direct-registry"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mikola Lysenko",email = "mikolalysenko@gmail.com"},
]
dependencies = ["six==1.16.0"]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
