[project]
name = "transitive-path"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mikola Lysenko",email = "mikolalysenko@gmail.com"},
]
dependencies = ["python-dateutil==2.9.0.post0"]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
